Manufactoring/force-app/main/default/objects/mfg_Agreement_Product_Schedule__c/mfg_Agreement_Product_Schedule__c.object-meta.xml
<CustomObject>
    <label>Agreement Product Schedule</label>
    <nameField>
        <displayFormat>APS-{0000000000}</displayFormat>
        <label>Product Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Product Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>