Manufactoring/force-app/main/default/objects/mfg_Agreement_Product_Schedule__c/fields/mfg_Actual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>mfg_Actual_Quantity__c</fullName>
    <label>Actual Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>