Manufactoring/force-app/main/default/objects/mfg_Agreement_Product_Schedule__c/fields/mfg_Period_Label__c.field-meta.xml
<CustomField>
    <fullName>mfg_Period_Label__c</fullName>
    <label>Period Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>