Manufactoring/force-app/main/default/objects/mfg_Agreement_Product_Schedule__c/fields/mfg_Schedule_End_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Schedule_End_Date__c</fullName>
    <label>Schedule End Date</label>
    <type>Date</type>
</CustomField>