Manufactoring/force-app/main/default/objects/mfg_Agreement_Product_Schedule__c/fields/mfg_Status__c.field-meta.xml
<CustomField>
    <fullName>mfg_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>